k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-occupancy-manager
  labels:
    app: room-occupancy-manager
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: room-occupancy-manager
